# highlite

./: README.md
client/: README.md  index.html  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Header.jsx  ProcessingStatus.css  ProcessingStatus.jsx  UploadSection.css  UploadSection.jsx  VideoPlayer.css  VideoPlayer.jsx
client/src/services/: api.js
server/: README.md  env.example  pyproject.toml  requirements.txt
server/app/: __init__.py  config.py  database.py  main.py  models.py
server/app/routes/: __init__.py  jobs.py  upload.py
server/app/services/: __init__.py  storage.py  twelvelabs.py  video.py
server/app/workers/: __init__.py  processor.py
